--- a/src/styles/base/_variables.sass
+++ b/src/styles/base/_variables.sass
@@ -17,7 +17,7 @@ $background-color: #E4E4E6
 $button-color: #C4C8CC
 $button-hover: #b9bdc0
 $cart-color: #374151
-$cart-itme-color: #475569
+$cart-item-color: #475569
 
 $red: #E74542
 $orange: #ffae18
