--- a/src/styles/_app.sass
+++ b/src/styles/_app.sass
@@ -16,12 +16,9 @@ html, body
     display: flex
     flex-direction: column
 
+.appcart
+    padding: 0 400px 0 10%
+
     @media (max-width: 1057px)
         align-items: center
-
-    @media (max-width: 1670px)
-        padding: 0 5%
-
-    @media (max-width: 1250px)
-        padding: 0 2%
 
