--- a/src/styles/components/_navbar.sass
+++ b/src/styles/components/_navbar.sass
@@ -1,5 +1,6 @@
 .navbar
-    width: 82%
+    width: 1250px
+    max-width: 100%
     display: flex
     flex-direction: row
     justify-content: space-between
@@ -16,6 +17,11 @@
         display: flex
         align-items: center
         justify-content: center
+        user-select: none
+
+        
+        &:hover
+            cursor: pointer
 
 
     @media (min-width: 1953px)
