updated cat cards

--- a/src/styles/_app.sass
+++ b/src/styles/_app.sass
@@ -5,6 +5,10 @@ html, body
     margin: 0
     padding: 0
     height: 100%
+    scrollbar-width: none
+
+li
+    list-style-type: none
 
 .app
     background-color: $background-color
