--- a/src/styles/pages/_cart.sass
+++ b/src/styles/pages/_cart.sass
@@ -15,7 +15,23 @@
     background-color: $cart-color
     animation: cartEnter 0.2s ease
     color: white
-    padding: 30px
+    display: flex
+    padding: 30px 0
+    overflow-x: hidden
+    scrollbar-width: none
+
+    &-card
+        border: 1px solid black
+        border-radius: 10px
+        padding: 20px
+        margin: 50px 0
+        background-color: $background-color
+        color: black
+
+        img
+            width: 50px
+            height: 50px
+
 
     @media (max-width: 900px)
         width: 100%
@@ -31,3 +47,6 @@
     @media (max-width: 900px)
         top: 30px
         right: 30px
+
+.padding-bottom
+    height: 1px
