--- a/src/styles/pages/_cart.sass
+++ b/src/styles/pages/_cart.sass
@@ -27,13 +27,39 @@
         margin: 50px 0
         background-color: $background-color
         color: black
+        position: relative
+        display: flex
+        width: 300px
+        
 
         img
-            width: 50px
-            height: 50px
+            width: auto
+            height: 70px
+            margin: 0 2% 0 0
+
+        &-text
+            display: flex
+            flex-direction: column
+
+            &-name
+                font-size: $base
+                font-weight: $bold
+
+            &-price
+                position: absolute
+                bottom: 5%
+                right: 5%
+
+            &-quantity
+                position: relative
+                top: 20px
+                font-size: $medium
+
+                & button
+                    border: none
 
 
-    @media (max-width: 900px)
+    @media (max-width: 530px)
         width: 100%
         padding: 40px
 
@@ -50,3 +76,18 @@
 
 .padding-bottom
     height: 1px
+
+.remove-card
+    cursor: pointer
+    position: absolute
+    top: 10px
+    right: 10px
+    font-size: $large
+
+.empty-cart
+    width: 100%
+    text-align: center
+    position: absolute
+    top: 20%
+    font-size: $large
+    font-weight: $bold
