--- a/src/styles/components/_navbar.sass
+++ b/src/styles/components/_navbar.sass
@@ -18,6 +18,26 @@
         align-items: center
         justify-content: center
         user-select: none
+        position: relative
+
+        &-none
+            display: none
+
+        &-count
+            font-size: 12px
+            color: white
+            border-radius: 50%
+            background-color: red
+            width: 15px
+            height: 15px
+            position: absolute
+            left: -5px
+            top: 25px
+            display: flex
+            justify-content: center
+            align-items: center
+            font-weight: $bold
+
 
         
         &:hover
