--- a/src/styles/components/_card.sass
+++ b/src/styles/components/_card.sass
@@ -10,6 +10,7 @@
     img
         height: 50%
         width: 100%
+        filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5))
 
     .card-name
         width: 100%
