updated add-to-cart button

--- a/src/styles/components/_button.sass
+++ b/src/styles/components/_button.sass
@@ -6,9 +6,13 @@
     border-radius: 7px
     padding: 10px
     transition: 0.2s ease
+    color: $cart-color
+    -webkit-color: $cart-color
+
 
     svg
         font-size: $base
+        -webkit-font: $base
 
     div
         display: flex
