updated button for safari

--- a/src/styles/components/_button.sass
+++ b/src/styles/components/_button.sass
@@ -12,11 +12,12 @@
 
     svg
         font-size: $base
-        -webkit-font: $base
 
     div
         display: flex
+        flex-direction: row
         justify-content: space-around
+        align-items: center
         font-size: $small
 
 
