updated cart css

--- a/src/styles/pages/_cart.sass
+++ b/src/styles/pages/_cart.sass
@@ -58,6 +58,7 @@
                 font-size: $medium
 
                 & button
+                    background-color: transparent
                     border: none
 
 
