--- a/src/styles/components/_button.sass
+++ b/src/styles/components/_button.sass
@@ -8,6 +8,7 @@
     transition: 0.2s ease
     color: $cart-color
     -webkit-color: $cart-color
+    -webkit-appearance: none;
 
 
     svg
@@ -18,6 +19,7 @@
         flex-direction: row
         justify-content: space-around
         align-items: center
+        text-align: center
         font-size: $small
 
 
