--- a/src/styles/components/_button.sass
+++ b/src/styles/components/_button.sass
@@ -8,7 +8,7 @@
     transition: 0.2s ease
     color: $cart-color
     -webkit-color: $cart-color
-    -webkit-appearance: none;
+    -webkit-appearance: none
 
 
     svg
