updated css for safari

--- a/src/styles/components/_button.sass
+++ b/src/styles/components/_button.sass
@@ -1,5 +1,6 @@
 .card-button
-    width: 110px
+    width: fit-content
+    -webkit-wi
     height: 40px
     background-color: $button-color
     border: none
